- fix BUGS - add error code for rendering - optimze povray worker to handle errors
